clusters/home/default/minecraft/99-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: papermc-deployment
  namespace: default
  labels:
    app: papermc
spec:
  replicas: 1
  serviceName: papermc-service
  selector:
    matchLabels:
      app: papermc
  template:
    metadata:
      labels:
        app: papermc
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      # Only x64 image and would probably not run on a pi
      nodeSelector:
        kubernetes.io/hostname: kevin-laptop
      containers:
      - name: papermc
        image: ghcr.io/koskev/lazypaper:2024.02.12
        imagePullPolicy: "Always"
        volumeMounts:
        - name: papermc-data
          mountPath: /papermc
        resources:
          requests:
            memory: "2500Mi"
      volumes:
      - name: papermc-data
        hostPath:
          path: /mnt/shared_data/k8s/papermc
