clusters/home/default/minecraft/80-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: papermc-service
  namespace: default
  labels:
    app: papermc
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "coolmcserver.mooo.com"
spec:
  selector:
    app: papermc
  ports:
    - name: game
      protocol: TCP
      port: 25565
      targetPort: 25565
    - name: map
      protocol: TCP
      port: 80
      targetPort: 8100
    - name: voice
      protocol: UDP
      port: 24454
      targetPort: 24454
  type: LoadBalancer
