clusters/home/default/minecraft/90-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluemap-ingress
  namespace: default
spec:
  ingressClassName: nginx-external
  rules:
    - host: coolmcserver.mooo.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: papermc-service
                port:
                  number: 8100
            path: /
